test_suite/tests/ui/enum-representation/internally-tagged-struct.stderr
error: #[serde(tag = "...")] can only be used on enums
 --> $DIR/internally-tagged-struct.rs:6:1
  |
6 | struct S;
  | ^^^^^^

error: aborting due to previous error

