test_suite/tests/ui/enum-representation/internally-tagged-struct.rs
#[macro_use]
extern crate serde_derive;

#[derive(Serialize)]
#[serde(tag = "type")]
struct S;

fn main() {}
